--- a/index.html
+++ b/index.html
@@ -32,10 +32,36 @@
             <button class="btn btn-remove">Remove</button>
           </td>
         </tr>
+        <tr class="product">
+          <td class="name">
+            <span>Ironhack Rubber Rooster</span>
+          </td>
+          <td class="price">$<span>50.00</span></td>
+          <td class="quantity">
+            <input type="number" value="0" min="0" placeholder="Quantity" />
+          </td>
+          <td class="subtotal">$<span>0</span></td>
+          <td class="action">
+            <button class="btn btn-remove">Remove</button>
+          </td>
+        </tr>
+        <tr class="product">
+          <td class="name">
+            <span>Ironhack Rubber Goose</span>
+          </td>
+          <td class="price">$<span>35.00</span></td>
+          <td class="quantity">
+            <input type="number" value="0" min="0" placeholder="Quantity" />
+          </td>
+          <td class="subtotal">$<span>0</span></td>
+          <td class="action">
+            <button class="btn btn-remove">Remove</button>
+          </td>
+        </tr>
         <!-- Iteration 2: Add more products here -->
       </tbody>
       <tfoot>
-        <!-- <tr class="create-product">
+         <tr class="create-product">
           <td>
             <input type="text" placeholder="Product Name" />
           </td>
@@ -54,6 +80,6 @@
       <button id="calculate" class="btn btn-success">Calculate Prices</button>
     </p>
     <h2 id="total-value">Total: $<span>0</span></h2>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./src/index.js"></script>
   </body>
 </html>
